게시물 목록

--- a/src/main/resources/templates/post_form.html
+++ b/src/main/resources/templates/post_form.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
-
+    <h1>글 등록</h1>
+    <form action="">
+        <button type="submit">글 등록</button>
+    </form>
 </body>
 </html>
