--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<h1>게시물 목록</h1>
-<table>
-    <thead>
-    <tr>
-        <th>제목</th>
-        <th>내용</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="post : ${posts}">
-        <td th:text="${post.title}"></td>
-        <td th:text="${post.content}"></td>
-    </tr>
-    </tbody>
-</table>
-</body>
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
+<div layout:fragment="content" class="container my-3">
+    <body>
+    <h1>게시물 목록</h1>
+    <table>
+        <thead>
+        <tr>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="post : ${posts}">
+            <td><a th:href="@{/posts/{id}(id=${post.id})}" th:text="${post.title}"></a></td>
+            <td th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd HH:mm')}"></td>
+            <td><a th:href="@{/posts/{id}/update(id=${post.id})}">수정</a></td>  <!-- 수정 링크 -->
+            <td><a th:href="@{/posts/{id}/delete(id=${post.id})}">삭제</a></td>  <!-- 삭제 링크 -->
+        </tr>
+        </tbody>
+    </table>
+    <a href="/create">새 게시물 작성</a>
+    </body>
+</div>
 </html>
