--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -15,11 +15,12 @@
             <td><a th:href="@{/posts/{id}(id=${post.id})}" th:text="${post.title}"></a></td>
             <td th:text="${#temporals.format(post.createdAt, 'yyyy-MM-dd HH:mm')}"></td>
             <td><a th:href="@{/posts/{id}/update(id=${post.id})}">수정</a></td>  <!-- 수정 링크 -->
-            <td><a th:href="@{/posts/{id}/delete(id=${post.id})}">삭제</a></td>  <!-- 삭제 링크 -->
+            <td><a th:href="@{/posts/{id}/delete(id=${post.id})}" onclick="return confirm('삭제하시겠습니까?')">삭제</a></td>  <!-- 삭제 링크 -->
         </tr>
         </tbody>
     </table>
     <a href="/create">새 게시물 작성</a>
+    <a href="/logout">로그아웃</a>
     </body>
 </div>
 </html>
