--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>회원가입</title>
-</head>
 <body>
 <h1>회원가입</h1>
-<form action="/signup" method="post">
+<form th:action="@{|/signup|}" method="post">
     <label for="username">ID :</label><br>
     <input type="text" id="username" name="username"><br>
     <label for="password">Password :</label><br>
