--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>새 게시물 작성</title>
-</head>
-<body>
 <div layout:fragment="content" class="container my-3">
+    <body>
     <h1>새 게시물 작성</h1>
-    <form th:action="@{/create}" method="post">  <!-- /create로 POST 요청을 보내는 form -->
+    <form th:action="@{|/create|}" method="post">  <!-- /create로 POST 요청을 보내는 form -->
         <label for="title">제목:</label><br>
         <input type="text" id="title" name="title"><br>  <!-- 제목 입력 필드 -->
         <label for="content">내용:</label><br>
@@ -17,6 +13,6 @@
         <input type="submit" value="등록">
         <a href="/posts">뒤로가기</a><!-- 홈 버튼 -->
     </form>
+    </body>
 </div>
-</body>
 </html>
