--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -10,12 +10,10 @@
     <h1>로그인</h1>
     <form th:action="@{/login}" method="post">
         <div class="mb-3">
-            <label for="username" class="form-label">사용자ID</label>
-            <input type="text" name="username" id="username" class="form-control" required>
+            <input type="text" name="username" id="username" class="form-control" required placeholder="아이디">
         </div>
         <div class="mb-3">
-            <label for="password" class="form-label">비밀번호</label>
-            <input type="password" name="password" id="password" class="form-control" required>
+            <input type="password" name="password" id="password" class="form-control" required placeholder="비밀번호">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
     </form>
